# Code-Evaluation-Website

./: Cargo.toml  README.md  img_iframe_test.html  js_JSON.json
playground/: filter.js
src/: main.rs
src/endpoints/: mod.rs  response.rs
src/model/: ctx.rs  linter.rs  mod.rs
src/model/rules/: mod.rs
src/model/rules/css/: dry.rs  minify.rs  mod.rs
src/model/rules/html/: loading.rs  mod.rs
src/model/rules/java/: mod.rs
src/model/rules/js/: duplicates.rs  methods.rs  minify.rs  mod.rs  template_rule.rs
templates/: base.html  evaluation.html  prism.js  rules.html  styles.css  suggestions.html
text/Template/: CodeGreen.aux  CodeGreen.bbl  CodeGreen.bcf  CodeGreen.fdb_latexmk  CodeGreen.fls  CodeGreen.lof  CodeGreen.lot  CodeGreen.run.xml  CodeGreen.tex  CodeGreen.toc  appendix.aux  chap1.aux  chap1.tex  chap2.aux  chap2.tex  chap3.aux  chap3.tex  defs.tex  title.aux  title.tex  toc.aux
