[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
askama = "0.12.1"