[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
axum-extra = {version = "0.9.2", features = ["form"]} 
serde = { version = "1.0.196", features = ["derive"] }
askama = {version="0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features = ["env-filter"]}
nom = "7.1.3"
scraper = "0.18.1"
oxc = {version = "0.8.0" , features = ["serde", "semantic"]}
serde_json = "1.0.113"
