[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
axum-extra = {version = "0.9.3", features = ["form"]} 
serde = { version = "1.0.210", features = ["derive"] }
askama = {version="0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features = ["env-filter"]}
nom = "7.1.3"
scraper = "0.20.0"
oxc = {version = "0.27.0" , features = ["semantic"]}
serde_json = "1.0.128"
minifier = "0.3.1"
css-minify = "0.5.2"
